use relative path for static resource

--- a/src/main/resources/search/common.html
+++ b/src/main/resources/search/common.html
@@ -6,8 +6,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.18.4/URI.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" type="text/javascript"></script>
 
-<script src="/system/console/search/common.js" type="text/javascript"></script>
-<link href="/system/console/search/common.css" rel="stylesheet"/>
+<script src="search/common.js" type="text/javascript"></script>
+<link href="search/common.css" rel="stylesheet"/>
 
 <script id="legal-notice-template" type="text/x-handlebars-template">
 	<div class="dialog dialog-legal-notice">
