--- a/src/main/resources/search/plugin.html
+++ b/src/main/resources/search/plugin.html
@@ -1,7 +1,7 @@
 ${common}
 
-<script src="/system/console/search/scripts.js" type="text/javascript"></script>
-<link href="/system/console/search/styles.css" rel="stylesheet"/>
+<script src="search/scripts.js" type="text/javascript"></script>
+<link href="search/styles.css" rel="stylesheet"/>
 
 <p class="statline ui-state-highlight">
     Search for bundles, decompile classes, view services or quickly enter configurations.
