#1 | Front-end prepared

--- a/src/main/resources/search/plugin.html
+++ b/src/main/resources/search/plugin.html
@@ -74,7 +74,8 @@ ${common}
 			<span class="select-actions">
 				<a class="select-all" href="javascript:">Select all</a>
 				<a class="deselect-all" href="javascript:">Deselect all</a>
-				<a class="search-classes" href="javascript:">Decompile & search</a>
+				<a class="search-classes" href="javascript:">Decompile &amp; search</a>
+				<a class="generate-sources" href="javascript:">Generate sources</a>
 			</span>
 
 			<span class="about" style="float: right">
