Add support for Fernflower decompiler

--- a/src/main/resources/search/plugin.html
+++ b/src/main/resources/search/plugin.html
@@ -58,6 +58,7 @@ ${common}
 					<span>Decompiler</span>
 					<select name="decompiler" class="ui-state-default ui-corner-all">
 						<option value="JD_CORE" selected>JD-Core</option>
+						<option value="FERN_FLOWER">FernFlower</option>
 						<option value="CFR">CFR</option>
 					</select>
 				</label>
