Class tree displays source in same window for easier exploration

--- a/src/main/resources/search/plugin.html
+++ b/src/main/resources/search/plugin.html
@@ -169,7 +169,10 @@ ${common}
 
 <script id="bundle-classes-template" type="text/x-handlebars-template">
     <div class="dialog dialog-bundle-classes">
-        <div class="tree"></div>
+		<div class="row">
+			<div class="col span4"><div class="tree"></div></div>
+			<div class="col span8"><div id="tree-source"></div></div>
+		</div>
     </div>
 </script>
 
