-Solve issue with flex-box auto-scroll and height

--- a/src/main/resources/search/plugin.html
+++ b/src/main/resources/search/plugin.html
@@ -169,7 +169,7 @@ ${common}
 
 <script id="bundle-classes-template" type="text/x-handlebars-template">
     <div class="dialog dialog-bundle-classes">
-		<div class="row">
+		<div class="row" style="height: 500px">
 			<div class="col span4"><div class="tree"></div></div>
 			<div class="col span8"><div id="tree-source"></div></div>
 		</div>
