--- a/src/main/resources/search/common.html
+++ b/src/main/resources/search/common.html
@@ -1,10 +1,10 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.2/lodash.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js" type="text/javascript"></script>
-<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js" type="text/javascript"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/jqtree/1.3.6/jqtree.min.css" rel="stylesheet"/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jqtree/1.3.6/tree.jquery.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.18.4/URI.min.js" type="text/javascript"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" type="text/javascript"></script>
+<script src="search/libs/lodash-4.17.2.min.js" type="text/javascript"></script>
+<script src="search/libs/handlebars-4.0.6.min.js" type="text/javascript"></script>
+<script src="search/libs/run_prettify-0.1.0.min.js" type="text/javascript"></script>
+<link href="search/libs/jqtree-1.3.6.min.css" rel="stylesheet"/>
+<script src="search/libs/jqtree-1.3.6.jquery.min.js" type="text/javascript"></script>
+<script src="search/libs/urijs-1.18.3.min.js" type="text/javascript"></script>
+<script src="search/libs/jquery.cookie-1.4.1.min.js" type="text/javascript"></script>
 
 <script src="search/common.js" type="text/javascript"></script>
 <link href="search/common.css" rel="stylesheet"/>
